Bug 292197 - Anonymous file selection impossible when automatic extension active
Summary: Anonymous file selection impossible when automatic extension active
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-01-22 14:47 UTC by Jean-Marie Beck
Modified: 2018-03-28 07:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Marie Beck 2012-01-22 14:47:57 UTC
Version:           4.6.1 (using KDE 4.7.4) 
OS:                Linux

In the save as dialog, when selecting filter to "Anonymous file" while the option "Automatically select file name extension" is active will make the file type be .XML
If the automatic file extension feature is off, you can select the filter "Anonymous file", but the file will keep the previously used extension i.e. .kmy or .xml and is not saved as anonymous file.

Reproducible: Always

Steps to Reproduce:
As stated in the details section

Actual Results:  
The only way to get an anonymous file is to set extension name feature manual, set the filter to anonymous and type in the desired file extension.

Expected Results:  
Automatic file extension feature should never influence the file filter field.
Comment 1 Jack 2012-01-22 18:03:05 UTC
I'm using 4.6.1, and there is clearly something funny going on.  First, when I open the save as dialog, the filename is pre-populated with a recent name I have saved as, but not the name of the currently open file.  On subsequent tries, it uses a different name.  With Auto Extension off, if I change the Filter to Anonymous files, the file name does not change, and it saves as a plain kmy file.  If I make any change to the file name, it resets the filter to all files.  

The only way I can find to actually save an anonymous file is to turn off auto extension, blank out the file name, filter on all files, type the file name (no extension,) filter on anonymous files, then turn auto extension on.  In addition, even though it does save an anonymous file, the app is still displaying my kmy file, not the anonymous version it just saved.
Comment 2 Cristian Oneț 2014-07-29 10:54:21 UTC
Jack can you reproduce this with the current version?
Comment 3 Jack 2014-11-12 19:39:57 UTC
The problem is still present with git master.  (Discovered saving an anonymous file to test a different bug.)
Comment 4 Cristian Oneț 2014-11-13 07:39:41 UTC
Based on comment #3.
Comment 5 wojnilowicz 2017-05-14 04:58:01 UTC
Git commit 41e6c3d24412ba7b1999ae0ac1b5a39ac4958400 by Łukasz Wojniłowicz.
Committed on 14/05/2017 at 04:40.
Pushed by wojnilowicz into branch 'master'.

Port KMyMoneyApp::slotFileSaveAs() to KF5

It seems that okToWriteFile isn't needed, because native QFileDialog
prompts in case of overwriting file and is able to point remote
location.
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D5688

M  +46   -78   kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/41e6c3d24412ba7b1999ae0ac1b5a39ac4958400