Port KMyMoneyApp::slotFileSaveAs() to KF5

It seems that okToWriteFile isn't needed, because native QFileDialog
prompts in case of overwriting file and is able to point remote
location.

BUG:292197
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D5688